--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
     <section class="about-me">
         <h2>About Me</h2>
-        <p>Welcome to my portfolio! This is a collection of my work so far from the class Academic Writing and Critical Inquiry.</p>
-        <img src="pic.jpg" alt="Profile Photo" class="profile-photo">
+		<img src="pic.jpg" alt="Profile Photo" class="profile-photo">
+        <p>Welcome to my portfolio! This is a collection of my work so far from the class Academic Writing and Critical Inquiry.
+		I am a freshman at UNCA majoring in Ecology and Sustainability. As such, much of my writing is concerned with nature and
+		building solutions that integrate human development with the natural world. </p>
     </section>
 
     <section class="projects">
