--- a/video.html
+++ b/video.html
@@ -16,7 +16,9 @@
         </nav>
     </header>
 
-        <img src="" alt="" class="graphic">
+ <iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe> 
 
 
 </body>
