--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <p>An infographic I've created regarding writing in ecology.</p>
             <p><a href="graphic.html">View</a></p>
         </div>
+	        <div class="project">
+            <h3>Video</h3>
+            <p>An short video I've created regarding social housing as a solution to homelessness.</p>
+            <p><a href="video.html">View</a></p>
+        </div>
         <!-- Add more projects as needed -->
     </section>
 
