--- a/video.html
+++ b/video.html
@@ -16,9 +16,7 @@
         </nav>
     </header>
 
- <iframe width="840" height="700"
-src="https://www.youtube.com/embed/TJfA00PLJCM?si=xVQ8pxgnleXwIEH_"
-</iframe> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TJfA00PLJCM?si=GzyCIVkfCzgZuqH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 </body>
