--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	        <div class="project">
             <h3>Video</h3>
             <p>An short video I've created regarding social housing as a solution to homelessness.</p>
-            <p><a href="video.html">View</a></p>
+            <p><a href="https://www.youtube.com/watch?v=TJfA00PLJCM">View</a></p>
         </div>
         <!-- Add more projects as needed -->
     </section>
